--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^7.13.0",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
